ITAB-1 (#32)
* Configure custom Telegram API URL and OkHttp logging

* Add future exams command and tune bot HTTP client